--- a/src/demo.html
+++ b/src/demo.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Hull Quiz</title>
   <script src="https://hull-js.s3.amazonaws.com/0.8/hull.api.debug.js"></script>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.5/css/normalize.css">
