--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-  <title>Hull Quiz</title>
+  <meta charset="UTF-8">
+  <title>Awards Academy</title>
   <link rel="stylesheet" href="https://neuestrap.s3.amazonaws.com/releases/neue/b18eaf457f93592526b33ca0f966668a91628036/stylesheets/neue.css">
-  <script src="//d3f5pyioow99x0.cloudfront.net/0.8/hull.api.js"></script>
+  <script src="//d3f5pyioow99x0.cloudfront.net/0.8.46/hull.api.js"></script>
 </head>
 <body>
   <div class="ship"></div>
