--- a/src/ship.html
+++ b/src/ship.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="main"></div>
-  <script src="assets/ship.js"></script>
+  <script src="//unity.github.io/aa/assets/ship.js"></script>
 </body>
 </html>
 
