--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
   <div id="ship"></div>
-  <script src="assets/index.js"></script>
+  <script src="http://aa.hull.io/assets/index.js"></script>
 </body>
 </html>
