--- a/src/ship.html
+++ b/src/ship.html
@@ -4,8 +4,7 @@
   <title>Awards Academy</title>
 </head>
 <body>
-  <div class="main"></div>
-  <script src="//unity.github.io/aa/assets/ship.js"></script>
+  <script src="assets/ship.js"></script>
 </body>
 </html>
 
