--- a/src/ship.html
+++ b/src/ship.html
@@ -4,7 +4,7 @@
   <title>Awards Academy</title>
 </head>
 <body>
-  <script src="assets/ship.js"></script>
+  <script src="ship.js"></script>
 </body>
 </html>
 
