--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Awards Academy 2015</title>
-    <script src="//d3f5pyioow99x0.cloudfront.net/0.8.46/hull.api.debug.js"></script>
+    <script
+      id="hull-js-sdk"
+      platform-id="54e60986806eb9db67000287"
+      debug="true"
+      org-url="https://hulldemos.hullbeta.io"
+      src="https://hull-js.s3.amazonaws.com/255e12258703118aa181c1adc1bd0705f1b35503/hull.js"></script>
+    <script src="//js.hull.dev/assets/0.9.0/hull.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://neuestrap.s3.amazonaws.com/releases/neue/b18eaf457f93592526b33ca0f966668a91628036/stylesheets/neue.css"/>
     <style>body,html{margin:0;padding:0;}</style>
@@ -12,7 +18,8 @@
     <meta property="og:image" content="http://aa.hull.io/assets/images/AwardsAcademy.png" /> 
   </head>
   <body>
-    <div id="ship"></div>
-    <script src="http://aa.hull.io/assets/index.js"></script>
+    <h1>Outside !</h1>
+    <div id="demo"></div>
+    <script src="index.js"></script>
   </body>
 </html>
